Update config file for mls/mcs

--- a/sec-policy/selinux-base-policy/files/config
+++ b/sec-policy/selinux-base-policy/files/config
@@ -6,7 +6,10 @@
 #	disabled - No SELinux policy is loaded.
 SELINUX=permissive
 
-# SELINUXTYPE can take one of these two values:
+# SELINUXTYPE can take one of these four values:
 #	targeted - Only targeted network daemons are protected.
-#	strict - Full SELinux protection.
+#	strict   - Full SELinux protection.
+#	mls      - Full SELinux protection with Multi-Layered Security
+#	mcs      - Full SELinux protection with Multi-Category Security 
+#	           (mls, but only one sensitivity level)
 SELINUXTYPE=strict
