Better desktop file
Package-Manager: portage-2.2.14
Manifest-Sign-Key: 0x2EDD52403B68AF47

--- a/app-editors/archi/files/Archi.desktop
+++ b/app-editors/archi/files/Archi.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Exec=/opt/Archi/Archi64
-Icon=/opt/Archi/icon.xpm
+Exec=/opt/archi/Archi64
+Icon=/opt/archi/icon.xpm
 Name=Archi ArchiMate modelling tool
 GenericName=ArchiMate modelling tool
 Comment=ArchiMate modelling tool
